--- a/assets/WinSCP.ini
+++ b/assets/WinSCP.ini
@@ -2,6 +2,7 @@
 
 [Configuration\CDCache]
 pemaskladtest@pemalbc.savana-hosting.cz=41
+pemasklad@pemalbc.savana-hosting.cz=41
 
 [Configuration\Interface]
 RandomSeedFile=%25APPDATA%25%5Cwinscp.rnd
